--- a/article.html
+++ b/article.html
@@ -13,8 +13,8 @@
 </head>
 <body class="body-news">
     <div class="preloader">
-        <img src="./images/loader.gif" alt="loader"/>
-        <!-- <div class="txt-loading">
+        <!-- <img src="./images/loader.gif" alt="loader"/> -->
+        <div class="txt-loading">
 			<span data-text-preloader="L" class="letters-loading"> L</span>
 			<span data-text-preloader="A" class="letters-loading"> A</span>
 			<span data-text-preloader="W" class="letters-loading"> W</span>
@@ -24,7 +24,7 @@
 			<span data-text-preloader="R" class="letters-loading"> R</span>
 			<span data-text-preloader="P" class="letters-loading"> P</span>
 			<span data-text-preloader="." class="letters-loading"> .</span>
-		</div> -->
+		</div>
     </div>
     <header>
         <div class="infos">
@@ -71,7 +71,7 @@
                     <img src="./images/contact.jpg" alt="">
                 </div>
                 <div class="new-header">
-                    <span class="date"><i class="fa-solid fa-calendar-days"></i> 13 Dec, 2024</span>
+                    <span class="date"><i class="fa-solid fa-calendar-days"></i> Publié le 13 Dec, 2024</span>
                     <h3 class="new-title">Comment gagner un procés ?</h3>
                 </div>
                 <div class="new-body">
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </section>
-        <section class="newsletter">
+        <!-- <section class="newsletter">
             <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
                 <span class="ico"><i class="fa-solid fa-envelope"></i></span>
                 <div>
@@ -189,7 +189,7 @@
                     <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
                 </form>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <section class="footer-1">
