--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
 </head>
 <body class="body-news">
     <div class="preloader">
-        <img src="./images/loader.gif" alt="loader"/>
-        <!-- <div class="txt-loading">
+        <!-- <img src="./images/loader.gif" alt="loader"/> -->
+        <div class="txt-loading">
 			<span data-text-preloader="L" class="letters-loading"> L</span>
 			<span data-text-preloader="A" class="letters-loading"> A</span>
 			<span data-text-preloader="W" class="letters-loading"> W</span>
@@ -24,7 +24,7 @@
 			<span data-text-preloader="R" class="letters-loading"> R</span>
 			<span data-text-preloader="P" class="letters-loading"> P</span>
 			<span data-text-preloader="." class="letters-loading"> .</span>
-		</div> -->
+		</div>
     </div>
     <header>
         <div class="infos">
@@ -68,7 +68,7 @@
        <div class="newslist">
             <section class="news">
                 <div class="container">
-                    <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
+                    <!-- <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
                         <div class="img-new">
                             <img src="./images/pic-1.jpg" alt="">
                         </div>
@@ -100,7 +100,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eos?</p>
                             <a href="#" class="seemore">Lire +</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
                         <div class="img-new">
                             <img src="./images/pic-4.jpg" alt="">
@@ -221,7 +221,7 @@
                 </div>
             </div>
         </section>
-        <section class="newsletter">
+        <!-- <section class="newsletter">
             <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
                 <span class="ico"><i class="fa-solid fa-envelope"></i></span>
                 <div>
@@ -232,7 +232,7 @@
                     <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
                 </form>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <section class="footer-1">
