--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 </head>
 <body class="body-contact">
     <div class="preloader">
-        <img src="./images/loader.gif" alt="loader"/>
-        <!-- <div class="txt-loading">
+        <!-- <img src="./images/loader.gif" alt="loader"/> -->
+        <div class="txt-loading">
 			<span data-text-preloader="L" class="letters-loading"> L</span>
 			<span data-text-preloader="A" class="letters-loading"> A</span>
 			<span data-text-preloader="W" class="letters-loading"> W</span>
@@ -24,7 +24,7 @@
 			<span data-text-preloader="R" class="letters-loading"> R</span>
 			<span data-text-preloader="P" class="letters-loading"> P</span>
 			<span data-text-preloader="." class="letters-loading"> .</span>
-		</div> -->
+		</div>
     </div>
     <header>
         <div class="infos">
