--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body class="body-index">
     <div class="preloader">
-        <img src="./images/loader.gif" alt="loader"/>
-        <!-- <div class="txt-loading">
+        <!-- <img src="./images/loader.gif" alt="loader"/> -->
+        <div class="txt-loading">
 			<span data-text-preloader="L" class="letters-loading"> L</span>
 			<span data-text-preloader="A" class="letters-loading"> A</span>
 			<span data-text-preloader="W" class="letters-loading"> W</span>
@@ -24,7 +24,7 @@
 			<span data-text-preloader="R" class="letters-loading"> R</span>
 			<span data-text-preloader="P" class="letters-loading"> P</span>
 			<span data-text-preloader="." class="letters-loading"> .</span>
-		</div> -->
+		</div>
     </div>
     <header class="page-interne">
         <div class="infos">
@@ -65,6 +65,7 @@
                 </div>
                 <div class="btn-group">
                     <a href="./contact.html" class="btn">Contactez-nous</a>
+                    <a href="./servicelist.html" class="btn">Nos services</a>
                     <span><strong>7900</strong> cas réussis</span>
                 </div>
             </div>
@@ -76,7 +77,7 @@
     </header>
     <main>
         <section class="partners bg-light">
-            <!-- <h2 class="title" data-aos="zoom-out" data-aos-duration="1500"><span class="subtitle">Nos meilleurs clients</span>Nous avons permis à de grandes entreprises d'économiser de l'argent</h2> -->
+            <h2 class="title" data-aos="zoom-out" data-aos-duration="1500"><span class="subtitle">Nos meilleurs clients</span>Nous avons permis à de grandes entreprises d'économiser de l'argent</h2>
             <div class="container">
                 <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/01.png" alt="partner"></div>
                 <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/02.png" alt="partner"></div>
@@ -90,7 +91,7 @@
                 <img src="./images/pic-4.jpg" alt="team">
             </div>
             <div class="text-bloc flex" data-aos="fade-up" data-aos-duration="1500">
-                <h2 data-aos="zoom-out" data-aos-duration="1500" class="title"><span class="subtitle">Qui sommes-nous ?</span>Cabinet d'avocats expérimenté</h2>
+                <h2 data-aos="zoom-out" data-aos-duration="1500" class="title"><span class="subtitle">Qui sommes-nous ?</span>Cabinet d'avocats expérimentés</h2>
                <div class="text-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique fugit expedita aspernatur dignissimos iusto quam minima adipisci dolore pariatur explicabo, possimus ab voluptates! Rerum saepe quibusdam, nemo delectus debitis enim.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique fugit expedita aspernatur dignissimos iusto quam minima adipisci dolore pariatur explicabo, possimus ab voluptates! Rerum saepe quibusdam, nemo delectus debitis enim.</p>
@@ -205,7 +206,6 @@
                     <button class="filter" data-filter=".category-2">Litige</button>
                     <button class="filter" data-filter=".category-3">Famille</button>
                     <button class="filter" data-filter=".category-4">Santé</button>
-                    <button class="filter" data-filter=".category-5">Divorce</button>
                   </div>
                   
                   <div class="pager-list">
@@ -253,7 +253,7 @@
                     <img src="./images/faq.jpg" alt="faq">
                 </div>
                 <div class="accordion">
-                   <h2 class="title center"><span class="subtitle">Faq</span>Questions fréquentes</h2>
+                   <h2 class="title center"><span class="subtitle">Questions fréquentes</span>Faq</h2>
                   <div class="accordion-item">
                     <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="false"></span></button>
                     <div class="accordion-content">
@@ -449,7 +449,7 @@
                     </div>
                 </div>
             </div>
-            <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
+            <!-- <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
                 <span class="ico"><i class="fa-solid fa-envelope"></i></span>
                 <div>
                     <h3>Newsletter</h3>
@@ -458,15 +458,15 @@
                 <form action="#">
                     <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
                 </form>
-            </div>
+            </div> -->
         </section>
-        <!-- <section class="map" data-aos="fade-up" data-aos-duration="1500">
+        <section class="map" data-aos="fade-up" data-aos-duration="1500">
             <h2 class="title"><span class="subtitle">Où nous trouver ?</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nemo</h2>
             <div class="zone" data-aos="fade-up" data-aos-duration="1500">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.073013073073!2d3.876715314266073!3d43.61076972238347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5f6f4b3b3b1e1%3A0x1
                 1b3b1e1b3b1b3b1!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1633663666827!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
-        </section> -->
+        </section>
     </main>
     <footer>
         <section class="footer-1">
