--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         </div>
         <div class="banner interne">
             <div class="slogan" data-aos="fade-up" data-aos-duration="1500">
-                <h1>Contactez notre cabinet<br><strong>24h/24</strong> 7j/7</h1>
+                <h1>Contactez notre cabinet<br><strong>24h/</strong>7j</h1>
                 <p>N'hésitez pas à nous contacter pour toute demande d'information.</p>
             </div>
         </div>
@@ -85,7 +85,6 @@
                     </form>
                 </div>
                 <div class="infos" data-aos="fade-left" data-aos-duration="1500">
-                    <h2>Informations</h2>
                     <div class="item">
                         <h3>Adresse</h3>
                         <div class="group">
