--- a/index.html
+++ b/index.html
@@ -302,25 +302,25 @@
         <section class="atout">
             <h2 class="title center"><span class="subtitle center">Pourquoi nous choisir ?</span>Vous couvrir avec qualité et fiabilité</h2>
             <div class="container">
-                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
+                <div class="atout-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i1.png" alt="" /></span>
                     <h3>Professionnalisme</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
+                <div class="atout-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i2.png" alt="" /></span>
                     <h3>Expérience</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
+                <div class="atout-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i3.png" alt="" /></span>
                     <h3>Qualité</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
+                <div class="atout-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i4.png" alt="" /></span>
                     <h3>Sûreté</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
@@ -449,16 +449,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
-                <span class="ico"><i class="fa-solid fa-envelope"></i></span>
-                <div>
-                    <h3>Newsletter</h3>
-                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
-                </div>
-                <form action="#">
-                    <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
-                </form>
-            </div> -->
         </section>
         <section class="map" data-aos="fade-up" data-aos-duration="1500">
             <h2 class="title"><span class="subtitle">Où nous trouver ?</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nemo</h2>
@@ -501,6 +491,29 @@
                     <span><i class="fa-brands fa-twitter"></i></span>
                     <span><i class="fa-brands fa-instagram"></i></span>
                 </div>
+            </div>
+        </section>
+        <section class="footer-0">
+            <div class="adresse" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Coordonnées</h3>
+                <p>20 Bd des moutons, 4429 Katangua</p>
+            </div>
+            <div class="mail" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Email</h3>
+                <p><a href="mailto:contact@gmail.com">contact@gmail.com</a></p>
+            </div>
+            <div class="mail" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Téléphone</h3>
+                <p><a href="tel:+92 92 82 13 33">+92 92 82 13 33</a></p>
+            </div>
+            <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
+                <div class="newsletter-content">
+                    <h3>Newsletter</h3>
+                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
+                </div>
+                <form action="#">
+                    <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
+                </form>
             </div>
         </section>
         <section class="footer-2">
