--- a/blog.html
+++ b/blog.html
@@ -269,6 +269,29 @@
                 </div>
             </div>
         </section>
+        <section class="footer-0">
+            <div class="adresse" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Coordonnées</h3>
+                <p>20 Bd des moutons, 4429 Katangua</p>
+            </div>
+            <div class="mail" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Email</h3>
+                <p><a href="mailto:contact@gmail.com">contact@gmail.com</a></p>
+            </div>
+            <div class="mail" data-aos="fade-up" data-aos-duration="1500">
+                <h3>Téléphone</h3>
+                <p><a href="tel:+92 92 82 13 33">+92 92 82 13 33</a></p>
+            </div>
+            <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
+                <div class="newsletter-content">
+                    <h3>Newsletter</h3>
+                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
+                </div>
+                <form action="#">
+                    <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
+                </form>
+            </div>
+        </section>
         <section class="footer-2">
             <span>@Copyright 2025 - Tous droits réservés</span>
             <span>Made by MMD with <i class="fa-solid fa-mug-hot"></i></span>
