--- a/index.html
+++ b/index.html
@@ -217,28 +217,28 @@
                         <div class="default-card" data-aos="fade-right" data-aos-duration="1500">
                             <div class="img-content"><img src="./images/pic-1.jpg" alt=""></div>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, esse.</p>
-                            <a href="#" class="btn">Lire +</a>
+                            <a href="#" class="seemore">Lire +</a>
                         </div>
                     </div>
                     <div class="mix category-2">
                         <div class="default-card" data-aos="fade-right" data-aos-duration="1500">
                             <div class="img-content"><img src="./images/pic-2.jpg" alt=""></div>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, esse.</p>
-                            <a href="#" class="btn">Lire +</a>
+                            <a href="#" class="seemore">Lire +</a>
                         </div>
                     </div>
                     <div class="mix category-3">
                         <div class="default-card" data-aos="fade-right" data-aos-duration="1500">
                             <div class="img-content"><img src="./images/pic-3.jpg" alt=""></div>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, esse.</p>
-                            <a href="#" class="btn">Lire +</a>
+                            <a href="#" class="seemore">Lire +</a>
                         </div>
                     </div>
                     <div class="mix category-4">
                         <div class="default-card" data-aos="fade-right" data-aos-duration="1500">
                             <div class="img-content"><img src="./images/pic-4.jpg" alt=""></div>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, esse.</p>
-                            <a href="#" class="btn">Lire +</a>
+                            <a href="#" class="seemore">Lire +</a>
                         </div>
                     </div>
                     
@@ -382,7 +382,7 @@
                         <li>Lorem ipsum .</li>
                         <li>Lorem, ipsum dolor.</li>
                     </ul>
-                    <a href="#" class="btn">Obtenir un forfait</a>
+                    <a href="#" class="btn btn-default">Obtenir un forfait</a>
                 </div>
                 <div class="default-card tarif-card" data-aos="zoom-out" data-aos-duration="1500">
                     <span><i class="fa-solid fa-champagne-glasses"></i></span>
@@ -395,7 +395,7 @@
                         <li>Lorem ipsum .</li>
                         <li>Lorem, ipsum dolor.</li>
                     </ul>
-                    <a href="#" class="btn">Obtenir un forfait</a>
+                    <a href="#" class="btn btn-default">Obtenir un forfait</a>
                 </div>
                 <div class="default-card tarif-card" data-aos="fade-left" data-aos-duration="1500">
                     <span><i class="fa-solid fa-mug-hot"></i></span>
@@ -408,7 +408,7 @@
                         <li>Lorem ipsum .</li>
                         <li>Lorem, ipsum dolor.</li>
                     </ul>
-                    <a href="#" class="btn">Obtenir un forfait</a>
+                    <a href="#" class="btn btn-default">Obtenir un forfait</a>
                 </div>
             </div>
         </section>
